[package]
name = "cellar"
version = "0.1.2"
edition = "2021"
default-run = "cellar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cellar-reaper"
path = "src/reaper.rs"

[workspace]
members = [
  "cellar_sandbox"
]

[dependencies]
bincode = "1.3"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = "3.0.0-beta.5"
relative-path = { version = "1.5", features = ["serde"] }

log = "0.4"
flexi_logger = "0.19"

cellar_sandbox = { path = "./cellar_sandbox" }
